<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAcivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/txtv_developer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawableStart="@drawable/ic_instagram"
        android:drawablePadding="4dp"
        android:fontFamily="@font/adamina"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/developer"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />



    <TextView
        android:id="@+id/txtv_Privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_security_24dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/adamina"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/privacy_policy"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@id/txtv_developer" />

    <TextView
        android:id="@+id/txtv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_info_24dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/adamina"
        android:padding="16dp"
        android:text="@string/version"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:textColor="@color/colorBlack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtv_Privacy_policy" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:labelVisibilityMode="unlabeled"
        android:background="@color/colorWhite"
        android:theme="@style/TextInputLayoutTheme"
        app:itemTextColor="@drawable/bottom_nav_text_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/menu_navigation" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        android:layout_marginBottom="16dp"
        ads:layout_constraintStart_toStartOf="parent"
        ads:adUnitId="ca-app-pub-5657577738944896/1021459862">
    </com.google.android.gms.ads.AdView>
</androidx.constraintlayout.widget.ConstraintLayout>