<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />



    <ImageView
        android:id="@+id/iv_nature"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:contentDescription="@string/nature"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_circle_profile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:civ_border_width="2dp"
        android:background="@drawable/round_shape"
        app:layout_constraintStart_toStartOf="@id/iv_nature"
        app:layout_constraintTop_toTopOf="@id/iv_nature"
        app:layout_constraintEnd_toEndOf="@id/iv_nature"
        android:layout_marginTop="16dp"
        tools:targetApi="lollipop" />
    <ImageView
        android:id="@+id/iv_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_camera_black_24dp"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="@id/iv_circle_profile"
        app:layout_constraintBottom_toBottomOf="@id/iv_circle_profile"
        tools:targetApi="lollipop" />



    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="34dp"
        app:layout_constraintTop_toBottomOf="@id/iv_circle_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/activity_Signup_Card_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/activity_signup_Textinputlyout_Username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/user_name"
                        android:theme="@style/TextInputLayoutTheme"
                        app:layout_constraintTop_toTopOf="parent">

                        <EditText
                            android:id="@+id/activity_Signup_Edittext_Username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawablePadding="4dp"
                            android:drawableStart="@drawable/ic_perm_identity_black_24dp"
                            android:drawableTint="@color/colorYellow"
                            android:inputType="textPersonName"
                            tools:targetApi="m"
                            tools:ignore="RtlCompat" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/activity_signup_Textinputlyout_Email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:theme="@style/TextInputLayoutTheme"
                        app:layout_constraintTop_toBottomOf="@+id/activity_signup_Textinputlyout_Username">

                        <EditText
                            android:id="@+id/activity_Signup_Edittext_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:drawablePadding="4dp"
                            android:drawableStart="@drawable/ic_email_24dp"
                            android:drawableTint="@color/colorYellow"
                            android:inputType="textEmailAddress"
                            tools:targetApi="m"
                            tools:ignore="RtlCompat" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/activity_signup_Textinputlyout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:theme="@style/TextInputLayoutTheme"
                        app:layout_constraintTop_toBottomOf="@id/activity_signup_Textinputlyout_Email"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorYellow">

                        <EditText
                            android:id="@+id/activity_Signup_Edittext_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:drawableStart="@drawable/ic_lock_black_24dp"
                            android:drawableTint="@color/colorYellow"
                            android:drawablePadding="4dp"
                            android:inputType="textPassword"
                            tools:ignore="RtlCompat"
                            tools:targetApi="m" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/activity_signup_Textinputlyout_Confirmpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:theme="@style/TextInputLayoutTheme"
                        app:layout_constraintTop_toBottomOf="@id/activity_signup_Textinputlyout_password"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/colorYellow">

                        <EditText
                            android:id="@+id/activity_Signup_Edittext_Confirmpassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/confirm_password"
                            android:drawablePadding="4dp"
                            android:drawableTint="@color/colorYellow"
                            android:drawableStart="@drawable/ic_lock_black_24dp"
                            android:inputType="textPassword"
                            tools:targetApi="m"
                            tools:ignore="RtlCompat" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/activity_Signup_BtnSignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_btn_shape"
                        android:fontFamily="@font/adamina"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:text="@string/signup"
                        android:drawableStart="@drawable/ic_firebase"
                        android:paddingStart="4dp"
                        android:paddingEnd="24dp"
                        android:textAllCaps="false"
                        android:textColor="@color/colorBlack"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/activity_signup_Textinputlyout_Confirmpassword"
                        tools:targetApi="m" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/activity_Signup_textv_ForgotPasword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?android:selectableItemBackground"
                android:fontFamily="@font/adamina"
                android:text="@string/forgot_your_password"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/activity_Signup_Card_"
                app:layout_constraintStart_toStartOf="@id/activity_Signup_Card_"
                app:layout_constraintTop_toBottomOf="@+id/activity_Signup_Card_"
                tools:targetApi="m" />

            <TextView
                android:id="@+id/activity_Signup_txtv_alreadyhaveaccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="?android:selectableItemBackground"
                android:fontFamily="@font/adamina"
                android:text="@string/already_have_an_account"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/activity_Signup_textv_ForgotPasword"
                app:layout_constraintStart_toStartOf="@id/activity_Signup_textv_ForgotPasword"
                app:layout_constraintTop_toBottomOf="@id/activity_Signup_textv_ForgotPasword"
                tools:targetApi="m" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:indeterminateTint="@color/colorYellow"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>